// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches expected output: multiline-subject.header 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
From 93ee65de02e77c52eb9d677b859554b40253bafa Mon Sep 17 00:00:00 2001
From: =?UTF-8?q?Martin=20Zl=C3=A1mal?= <adeira@example.com>
Date: Wed, 10 Apr 2019 16:50:47 -0500
Subject: [PATCH] Docs: add Relay and GraphQL related videos from our internal
 JS Saturday


~~~~~~~~~~ OUTPUT ~~~~~~~~~~
{
  "debugMessages": [],
  "description": "",
  "author": "=?UTF-8?q?Martin=20Zl=C3=A1mal?= <adeira@example.com>",
  "timestamp": "Wed, 10 Apr 2019 16:50:47 -0500",
  "subject": "Docs: add Relay and GraphQL related videos from our internal JS Saturday"
}
`;

exports[`matches expected output: simple.header 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
From bf0a8783cf416f796659e60fe735bba98e676e67 Mon Sep 17 00:00:00 2001
From: Automator <adeira@example.com>
Date: Mon, 4 Feb 2019 13:29:04 -0600
Subject: [PATCH] Import and publish '@adeira/relay' (0.1.0)

Formerly known as '@mrtnzlml/relay'


~~~~~~~~~~ OUTPUT ~~~~~~~~~~
{
  "debugMessages": [],
  "description": "Formerly known as '@mrtnzlml/relay'",
  "author": "Automator <adeira@example.com>",
  "timestamp": "Mon, 4 Feb 2019 13:29:04 -0600",
  "subject": "Import and publish '@adeira/relay' (0.1.0)"
}
`;

exports[`matches expected output: unicode.header 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
From 0000000000000000000000000000000000000000 Mon Sep 17 00:00:00 2001
From: =?UTF-8?q?Martin=20Zl=C3=A1mal?= <adeira@example.com>
Date: Wed, 10 Apr 2019 16:50:47 -0500
Subject: [PATCH] Let's party 🍺 🍻 🍷 🍸😀 😬 😁 😂 😃 😄 😅


~~~~~~~~~~ OUTPUT ~~~~~~~~~~
{
  "debugMessages": [],
  "description": "",
  "author": "=?UTF-8?q?Martin=20Zl=C3=A1mal?= <adeira@example.com>",
  "timestamp": "Wed, 10 Apr 2019 16:50:47 -0500",
  "subject": "Let's party 🍺 🍻 🍷 🍸😀 😬 😁 😂 😃 😄 😅"
}
`;
